--- a/index.html
+++ b/index.html
@@ -115,19 +115,39 @@
         border: 1px solid #d0ff65;
         color: #d0ff65;
       }
+
+      #chatgpt-credit {
+        position: fixed;
+        bottom: 5px;
+        left: 5px;
+        font-size: 12px;
+        color: #d0ff65;
+        font-family: "Courier New", Courier, monospace;
+        opacity: 0.6;
+        user-select: none;
+        pointer-events: none;
+        z-index: 1000;
+      }
     </style>
   </head>
   <body>
     <h1>Cyberpunk: Breach Protocol</h1>
 
     <div id="controls">
-      <label for="difficulty" data-en="Difficulty level:" data-pl="Poziom trudności:">Poziom trudności:</label>
+      <label
+        for="difficulty"
+        data-en="Difficulty level:"
+        data-pl="Poziom trudności:"
+        >Poziom trudności:</label
+      >
       <select id="difficulty">
         <option value="4" data-en="Easy" data-pl="Łatwy">Łatwy</option>
         <option value="5" data-en="Medium" data-pl="Średni">Średni</option>
         <option value="6" data-en="Hard" data-pl="Trudny">Trudny</option>
       </select>
-      <button onclick="startGame()" data-en="Start" data-pl="Start">Start</button>
+      <button onclick="startGame()" data-en="Start" data-pl="Start">
+        Start
+      </button>
     </div>
 
     <div id="message"></div>
@@ -143,8 +163,8 @@
     </div>
 
     <div id="language-switcher">
-      <button onclick="switchLanguage('pl')">PL</button>
       <button onclick="switchLanguage('en')">EN</button>
+      <button onclick="switchLanguage('PL')">PL</button>
     </div>
 
     <script>
@@ -326,21 +346,26 @@
         startTimer();
       }
 
-      let lang = "pl";
+      let lang = "en";
 
       function switchLanguage(selectedLang) {
         lang = selectedLang;
-        document.querySelectorAll('[data-en]').forEach(el => {
-          if (el.id !== 'time') {
+        document.querySelectorAll("[data-en]").forEach((el) => {
+          if (el.id !== "time") {
             el.textContent = el.getAttribute(`data-${lang}`);
           }
         });
-        document.title = lang === 'pl' ? 'Cyberpunk Breach Protocol' : 'Cyberpunk Breach Protocol';
-        const difficulty = document.getElementById('difficulty');
-        difficulty.querySelectorAll('option').forEach(opt => {
+        document.title =
+          lang === "pl"
+            ? "Cyberpunk Breach Protocol"
+            : "Cyberpunk Breach Protocol";
+        const difficulty = document.getElementById("difficulty");
+        difficulty.querySelectorAll("option").forEach((opt) => {
           opt.textContent = opt.getAttribute(`data-${lang}`);
         });
       }
+
+      switchLanguage(lang);
     </script>
   </body>
 </html>
